--- a/api/build.gradle
+++ b/api/build.gradle
@@ -15,7 +15,6 @@ plugins {
     id 'java'
 }
 
-//apply plugin: 'java'
 apply plugin: 'com.github.j2objccontrib.j2objcgradle'
 
 
@@ -25,15 +24,13 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.7
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile "org.mockito:mockito-core:1.+"
-    testCompile 'com.squareup.retrofit2:retrofit-mock:2.0.0'
-
-    compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    testCompile 'junit:junit:4.11'
+    testCompile 'org.mockito:mockito-core:1.+'
+    //testCompile 'com.squareup.retrofit2:retrofit-mock:2.0.0'
+    compile 'com.google.guava:guava:19.0'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
-    compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
@@ -47,8 +44,8 @@ j2objcConfig {
     autoConfigureDeps true
 
     // Omit these two lines if you don't configure your Xcode project with CocoaPods
-    xcodeProjectDir '../ios'  //  suggested directory name
-    xcodeTargetsIos 'IOS-APP', 'IOS-APPTests'  // replace with your iOS targets
+    xcodeProjectDir '../app-ios'  //  suggested directory name
+    xcodeTargetsIos 'APP-IOS', 'APP-IOS-Tests'  // replace with your iOS targets
 
     finalConfigure()          // Must be last call to configuration
 }
