--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+    // j2objc-gradle doesn't work with gradle > 2.8 and android-gradle requires 2.10, so relax android
+    System.properties['com.android.build.gradle.overrideVersionCheck'] = 'true'
 }
 
 allprojects {
