--- a/local.properties
+++ b/local.properties
@@ -1,3 +1,3 @@
 
-sdk.dir=/Users/cecollins/Library/Android/sdk
-j2objc.home=/Users/cecollins/projects/j2objc-1.0.2
+sdk.dir=/Users/kamartin/Library/Android/sdk
+j2objc.home="/Applications/j2objc-1.1"
